--- a/views/bookViews/index.ejs
+++ b/views/bookViews/index.ejs
@@ -1,7 +1,7 @@
 <html lang="en">
-<%- include("./partials/head.ejs") %>
+<%- include("../partials/head.ejs") %>
 <body>
-  <%- include("./partials/header.ejs") %>
+  <%- include("../partials/header.ejs") %>
     <main id="current">
       <div class="container">
         <h2>Current books</h2>
@@ -20,10 +20,14 @@
           <h4>Author</h4>
           <br />
           <p>Description</p>
+          <br />
+          <p>Notes</p>
+          <br />
+          <p>Favorite quotes</p>
         </div>
       </div>
     </main>
-    <%- include("./partials/footer.ejs") %>
+    <%- include("../partials/footer.ejs") %>
     <script
       src="https://kit.fontawesome.com/d193bb7800.js"
       crossorigin="anonymous"
