--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,12 +5,12 @@
     <meta name="A book directory" content="" />
     <!--160 characters max-->
     <meta name="author" content="Bavly Shehata" />
-    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="stylesheet" type="text/css" href="../style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="./assets/favicon.png" />
+    <link rel="icon" href="../assets/favicon.png" />
     <title><%=title%></title>
   </head>
