--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
   <a href="./">
-    <img src="./assets/favicon.png" alt="Logo" />
+    <img src="../assets/favicon.png" alt="Logo" />
   </a>
   <h1><%=title%></h1>
   <i class="fas fa-bars"></i>
