--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,8 @@
 <footer>
   <p>Copyright © 2020, BavlifyWeb&trade;</p>
 </footer>
+<script
+  src="https://kit.fontawesome.com/d193bb7800.js"
+  crossorigin="anonymous"
+></script>
+<script src="../app.js"></script>
