--- a/views/bookViews/index.ejs
+++ b/views/bookViews/index.ejs
@@ -12,10 +12,11 @@
           <div class="book" data-bookID="<%=book._id%>">
             <i class="fas fa-trash"></i>
             <i class="fas fa-edit"></i>
-            <h3 class="editable title"><%=book.title%></h3>
-            <h3>(<span class="editable year"><%=book.year%></span>)</h3>
+            <h3>Title: <span class="editable title"><%=book.title%></span></h3>
             <br />
-            <h4 class="editable author"><%=book.author%></h4>
+            <h3>Year: <span class="editable year"><%=book.year%></span></h3>
+            <br />
+            <h4>Author: <span class="editable author"><%=book.author%></span></h4>
             <br />
             <p>Description: <span class="editable description"><%=book.description%></span></p>
             <br />
