--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,3 +6,4 @@
   crossorigin="anonymous"
 ></script>
 <script src="../app.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
