--- a/public/style.css
+++ b/public/style.css
@@ -36,13 +36,19 @@
 }
 html {
   font-size: 10px;
+  height: 100%;
   scroll-behavior: smooth;
 }
 body {
   font-family: "Crimson Text", serif;
   overflow-x: hidden;
   text-align: center;
-  background-color: var(--secondary-clr);
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+main {
+  flex: 1 0 auto;
 }
 .container {
   width: clamp(50px, 90%, 700px);
@@ -57,7 +63,8 @@ h1 {
 h2 {
   font-size: 2.2rem;
 }
-h3 {
+h3,
+dt {
   font-size: 1.9rem;
 }
 h4 {
@@ -74,6 +81,9 @@ dd {
 }
 label {
   text-transform: capitalize;
+}
+dd {
+  white-space: pre-line;
 }
 /* label::before {
   content: "";
@@ -149,7 +159,7 @@ header a {
   width: 100%;
   background-color: var(--secondary-clr);
   border-radius: 5px;
-  margin: 10px 0;
+  margin: 5px 0;
   padding: 5px;
 }
 #current h4 {
@@ -160,7 +170,6 @@ header a {
   width: 100%;
   padding: 5px;
   background-color: var(--secondary-clr);
-  font-size: 1.9em;
   font-weight: bold;
   border-radius: 5px;
 }
@@ -171,8 +180,14 @@ header a {
 #current dd {
   padding: 10px;
 }
-.book {
-  padding-bottom: 50px;
+#current .book {
+  padding: 5px;
+  margin-bottom: 50px;
+  position: relative;
+  border: 4px solid var(--main-clr);
+  border-radius: 5px;
+}
+#specific .book {
   position: relative;
 }
 .book .fa-trash {
@@ -235,4 +250,20 @@ header a {
 #new #confirm {
   padding: 1rem;
   color: var(--grey);
+}
+/*specific*/
+#specific {
+  text-align: left;
+}
+#specific h2 {
+  padding: 0 15%;
+}
+
+/*Footer*/
+footer {
+  flex-shrink: 0;
+}
+footer p {
+  background-color: var(--secondary-clr);
+  padding: 10px;
 }
