--- a/views/bookViews/browse.ejs
+++ b/views/bookViews/browse.ejs
@@ -34,6 +34,7 @@
           if (bookDescription === undefined) bookDescription = "None";
           %>
           <div class="book" data-bookID="<%=bookID%>">
+            <button class="btn">Add</button>
             <h3>Title: <span class="editable title"><%=bookTitle%></span></h3>
             <br />
             <h4>Year: <span class="editable year"><%=bookYear%></span></h4>
