--- a/views/bookViews/book.ejs
+++ b/views/bookViews/book.ejs
@@ -8,7 +8,7 @@
         <i class="fas fa-edit"></i>
         <h3>Title: <span class="editable title"><%=book.title%></span></h2>
         <br />
-        <h4>Year: <span class="editable year"><%=book.year%></span></h3>
+        <h4>Year: <span class="editable year"><%=book.year!=0?book.year:"Unknown"%></span></h3>
         <br />
         <h4>Author: <span class="editable author"><%=book.author%></span></h4>
         <br />
