--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,12 +1,12 @@
 <header>
-  <a href="./">
-    <img src="../assets/favicon.png" alt="Logo" />
+  <a href="/book">
+    <img src="/assets/favicon.png" alt="Logo" />
   </a>
   <h1><%=title%></h1>
   <i class="fas fa-bars"></i>
   <ul>
-    <a href="./" class="active"><li>My books</li></a>
-    <a href="./add"><li>Add a book</li></a>
-    <a href="./browse"><li>Browse</li></a>
+    <a href="/book" class="active"><li>My books</li></a>
+    <a href="/book/add"><li>Add a book</li></a>
+    <a href="/book/browse"><li>Browse</li></a>
   </ul>
 </header>
