--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,5 +6,5 @@
   crossorigin="anonymous"
 ></script>
 <script src="https://unpkg.com/axios@0.20.0-0/dist/axios.min.js"></script>
-<script src="../app.js"></script>
+<script src="/app.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
