--- a/views/bookViews/book.ejs
+++ b/views/bookViews/book.ejs
@@ -6,19 +6,19 @@
       <div class="book container" data-bookID="<%=book._id%>">
         <i class="fas fa-trash"></i>
         <i class="fas fa-edit"></i>
-        <h3>Title: <span class="editable title"><%=book.title%></span></h2>
+        <h3>Title <br> <span class="editable title"><%=book.title%></span></h3>
         <br />
-        <h4>Year: <span class="editable year"><%=book.year!=0?book.year:"Unknown"%></span></h3>
+        <h4>Year <br> <span class="editable year"><%=book.year!=0?book.year:"Unknown"%></span></h3>
         <br />
-        <h4>Author: <span class="editable author"><%=book.author%></span></h4>
+        <h4>Author <br> <span class="editable author"><%=book.author%></span></h4>
         <br />
         <dl>
           <dt>Description</dt>
           <dd class="editable description"><%=book.description%></dd>
           <dt>Notes</dt>
-          <dd class="editable notes"><%=book.notes%></dd>
+          <dd class="editable notes"><%=book.notes!=""?book.notes:"None"%></dd>
           <dt>Favorite quotes</dt>
-          <dd class="editable quotes"><%=book.quotes%></dd>
+          <dd class="editable quotes"><%=book.quotes!=""?book.quotes:"None"%></dd>
         </dl>
         <i class="fas fa-save"></i>
       </div>
