--- a/views/bookViews/index.ejs
+++ b/views/bookViews/index.ejs
@@ -19,25 +19,27 @@
           <label for="descending">Descending</label>
           <button type="button" class="btn" name="submit">Sort</button>
         </section>
-        <% for (var book of books) {
-          %>
-          <div class="book" data-bookID="<%=book._id%>">
-            <a href="/book/<%=book._id%>" class="bookLink"><h3>Title: <span class="editable title"><%=book.title%></span></h3></a>
-            <br />
-            <h4>Year: <span class="editable year"><%=book.year!=0?book.year:"Unknown"%></span></h4>
-            <br />
-            <h4>Author: <span class="editable author"><%=book.author%></span></h4>
-            <br />
-            <dl>
-              <dt>Description</dt>
-              <dd class="editable description"><%=book.description%></dd>
-              <dt>Notes</dt>
-              <dd class="editable notes"><%=book.notes!=""?book.notes:"None"%></dd>
-              <dt>Favorite quotes</dt>
-              <dd class="editable quotes"><%=book.quotes!=""?book.quotes:"None"%></dd>
-            </dl>
-          </div>
-        <% }%>
+        <section id="allBooks">
+          <% for (var book of books) {
+            %>
+            <div class="book" data-bookID="<%=book._id%>">
+              <a href="/book/<%=book._id%>" class="bookLink"><h3>Title: <span class="editable title"><%=book.title%></span></h3></a>
+              <br />
+              <h4>Year: <span class="editable year"><%=book.year!=0?book.year:"Unknown"%></span></h4>
+              <br />
+              <h4>Author: <span class="editable author"><%=book.author%></span></h4>
+              <br />
+              <dl>
+                <dt>Description</dt>
+                <dd class="editable description"><%=book.description%></dd>
+                <dt>Notes</dt>
+                <dd class="editable notes"><%=book.notes!=""?book.notes:"None"%></dd>
+                <dt>Favorite quotes</dt>
+                <dd class="editable quotes"><%=book.quotes!=""?book.quotes:"None"%></dd>
+              </dl>
+            </div>
+          <% }%>
+        </section>
       </div>
     </main>
     <%- include("../partials/footer.ejs") %>
