Added a delete all books for user feature

--- a/views/bookViews/index.ejs
+++ b/views/bookViews/index.ejs
@@ -40,6 +40,9 @@
             </div>
           <% }%>
         </section>
+        <section id="delete">
+          <button type="button" name="delete" class="btn">Delete All</button>
+        </section>
       </div>
     </main>
     <%- include("../partials/footer.ejs") %>
