--- a/public/style.css
+++ b/public/style.css
@@ -55,7 +55,6 @@ main {
   margin: 0 auto;
 }
 .btn {
-  padding: 2rem;
   font-family: "Crimson Text", serif;
 }
 h1 {
@@ -205,6 +204,17 @@ header a {
   width: 50px;
   align-items: center;
 }
+#listPage #delete {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+#listPage #delete .btn {
+  width: 20%;
+  background-color: var(--main-clr);
+  color: var(--secondary-clr);
+}
 #listPage .book {
   padding: 5px;
   margin-bottom: 50px;
@@ -327,6 +337,7 @@ header a {
   top: 9px;
   right: 5px;
   cursor: pointer;
+  padding: 2rem;
 }
 
 #browse .btn:hover {
