More compact efficient code for sorting user books

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
   <h1><%=title%></h1>
   <i class="fas fa-bars"></i>
   <ul>
-    <a href="/book" class="active"><li>My books</li></a>
+    <a href="/book/?sortBy=_id&order=-1" class="active"><li>My books</li></a>
     <a href="/book/add"><li>Add a book</li></a>
     <a href="/book/browse"><li>Browse</li></a>
   </ul>
