--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header>
-  <a href="/book">
+  <a href="/book/?sortBy=_id&order=-1&p=1">
     <img src="/assets/favicon.png" alt="Logo" />
   </a>
   <%
