--- a/views/bookViews/404.ejs
+++ b/views/bookViews/404.ejs
@@ -10,7 +10,8 @@
         var searchQuery =
           possible[Math.floor(Math.random() * (possible.length - 1))];
         %>
-        <p>Unfortunately, there were no results of your searched book. You can either <a href='/book/browse?q=<%=searchQuery%>&p=1'>browse for more books</a>, or <a href="/book/?sortBy=_id&order=-1&p=1">check your saved books</a>.</p>
+        <p>Looks like this page doesn't exist :(.
+          No worries though, you can <a href='/book/browse?q=<%=searchQuery%>&p=1'>browse for more books</a>, or <a href="/book/?sortBy=_id&order=-1&p=1">check your saved books</a>.</p>
       </div>
     </main>
     <%- include("../partials/footer.ejs") %>
