--- a/views/bookViews/add.ejs
+++ b/views/bookViews/add.ejs
@@ -32,7 +32,7 @@
               placeholder="Favorite quotes"
             ></textarea>
           </div>
-          <input type="submit" id="add" name="add" value="Add" class="btn" />
+          <input type="submit" id="add" name="add"class="btn" value="Add" />
         </form>
       </div>
     </main>
