--- a/views/bookViews/book.ejs
+++ b/views/bookViews/book.ejs
@@ -20,7 +20,7 @@
           <dt>Favorite quotes</dt>
           <dd class="editable quotes"><%=book.quotes!=""?book.quotes:"None"%></dd>
         </dl>
-        <i class="fas fa-save"></i>
+        <i class="fa-save fas"></i>
       </div>
     </main>
     <%- include("../partials/footer.ejs") %>
